--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
@@ -196,7 +196,7 @@
                               aria-controls="offcanvasRight"
                             >
                               <mat-icon class="icon-color-descargar"
-                                >download</mat-icon
+                                >visibility</mat-icon
                               >
                             </button>
                           </div>
