--- a/src/app/Ui/Modules/reportes/components/stats-reporte/stats-reporte.component.html
+++ b/src/app/Ui/Modules/reportes/components/stats-reporte/stats-reporte.component.html
@@ -1,18 +1,18 @@
 <div class="flex items-center justify-center content-center">
-  <div class="flex gap-4">
-    <div class="flex-1 min-h-[40px] rounded-2xl bg-[#0158DD] shadow-md px-4 flex items-center justify-center gap-x-4">
+  <div class="flex gap-2">
+    <div class="py-1 px-1.5 flex items-center gap-x-1 text-xs font-medium rounded-lg bg-[#0158DD] justify-center ">
       <p class="text-sm mb-0 uppercase tracking-wide text-gray-100">Exactos:</p>
-      <h3 class="text-lg mb-0 sm:text-xl font-semibold text-gray-100">{{ceros}}</h3>
+      <h3 class="text-xs font-medium text-white mb-0">{{ceros}}</h3>
     </div>
 
-    <div class="flex-1 min-h-[40px] rounded-2xl bg-[#00D1AE] shadow-md px-4 flex items-center justify-center gap-x-4">
+    <div class="py-1 px-1.5 flex items-center gap-x-1 text-xs font-medium rounded-lg bg-[#00D1AE] justify-center">
       <p class="text-sm mb-0 uppercase tracking-wide text-gray-100">Sobrantes:</p>
-      <h3 class="text-lg mb-0 sm:text-xl font-semibold text-gray-100">{{positivos}}</h3>
+      <h3 class="text-xs font-medium text-white mb-0">{{positivos}}</h3>
     </div>
 
-    <div class="flex-1 min-h-[40px] rounded-2xl bg-[#20477E] shadow-md  px-4 flex items-center justify-center gap-x-4">
+    <div class="py-1 px-1.5 flex items-center gap-x-1 text-xs font-medium rounded-lg bg-[#20477E] justify-center">
       <p class="text-sm mb-0 uppercase tracking-wide text-gray-100">Faltantes:</p>
-      <h3 class="text-lg mb-0 sm:text-xl font-semibold text-gray-100">{{negativos}}</h3>
+      <h3 class="text-xs font-medium text-white mb-0">{{negativos}}</h3>
     </div>
   </div>
 </div>
