27_02_2025 ARREGLO MARGIN DE LOS BUSCAR DE CARGA INVENTARIO Y REPORTES

--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.css
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.css
@@ -13,8 +13,12 @@ table th {
   flex-direction: row;
   align-items: center;
   padding-top: .1rem;
-  gap: .4REM;
+  gap: .4rem;
+  width: 100vw;
+  margin: 0;
 }
+
+
 
 .ancho_empresas {
   width: 22rem;
