27_02_2025 ARREGLO TOTAL ITEM DE REPORTES

--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
@@ -94,15 +94,12 @@
                           Cant. ítems
                         </th>
                         <td mat-cell *matCellDef="let row">
-                          <button
-                            class="cantidadtotal px-3 py-1 flex gap-2 align-center"
-                          >
-                            <span
-                              class="text-sm text-gray-600 dark:text-neutral-400"
-                            >
-                              {{ row.totalregistros || "-" }}
-                            </span>
-                          </button>
+                          <span
+                          class="cantidadtotal py-1 px-1.5 inline-flex items-center gap-x-1 text-xs font-medium bg-[#7197cc] text-white rounded-full"
+                        >
+                        {{ row.totalregistros || "-" }}
+                        </span>
+
                         </td>
                       </ng-container>
 
