--- a/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/registro-carga-inventarios/registro-carga-inventarios.component.html
@@ -138,7 +138,7 @@
                 </div>
               </div>
 
-              <div class="containar_ver_detalle">
+              <!-- <div class="containar_ver_detalle">
                 <h4 class="mb-0">
                   Items cargados: <span> {{ cantidadDatosExcel }}</span>
                 </h4>
@@ -153,7 +153,7 @@
                 >
                   <img src="../../../../../../assets/svg/icon_ver.svg" alt="" />
                 </button>
-              </div>
+              </div> -->
 
               <div class="Nombre_Inventario">
                 <label
