27_02_2025 ARREGLO SCROLL CARGA INVENTARIO Y REPORTES

--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
@@ -38,7 +38,7 @@
       <!-- =================================================================================== -->
       <!-- Apartado filtros -->
       <!-- =================================================================================== -->
-      <div class="container">
+      <div class="">
         <mat-form-field class="w-[20rem]">
           <mat-label>Buscar inventario</mat-label>
           <input
